# Breadcord

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  dev_requirements.txt  docker-compose.yml  docs_requirements.txt  mkdocs.yml  pyproject.toml  pyrightconfig.json  qodana.yaml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md
.github/workflows/: auto-assign.yml  auto_assign.yml  close_project_item.yml  codeql.yml  codeql_analysis.yml  docker_build.yml  lint.yml  mkdocs_build.yml  qodana.yml  qodana_analysis.yml  run_breadcord.yml
bot/: __init__.py  __main__.py  bot.py  config.py  module.py  settings_schema.toml
bot/modules/core/: __init__.py  manifest.toml
breadcord/: __init__.py  __main__.py  bot.py  build.py  commands.py  config.py  errors.py  helpers.py  module.py  settings_schema.toml
breadcord/app/: __init__.py  app.py  app.tcss
breadcord/app/screens/: __init__.py  exception_modal.py
breadcord/app/widgets/: __init__.py  better_header.py  table_log.py
breadcord/core_modules/Core/: __init__.py
breadcord/core_modules/auto_update/: __init__.py  core_module.toml  manifest.toml  settings_schema.toml
breadcord/core_modules/core/: __init__.py  manifest.toml
breadcord/core_modules/module_manager/: __init__.py  core_module.toml  manifest.toml  views.py
breadcord/core_modules/modulemanager/: __init__.py  manifest.toml  views.py
breadcord/core_modules/oobe/: __init__.py  manifest.toml
breadcord/core_modules/settings/: __init__.py  manifest.toml
breadcord/core_modules/settings_manager/: __init__.py  core_module.toml  manifest.toml  pyproject.toml
breadcord/core_modules/settingsmanager/: __init__.py  manifest.toml  settings_schema.toml
breadcord/modules/core/: __init__.py  manifest.toml
docs/: SUMMARY.md  docs_requirements.txt  index.md  module-manifest.md
docs/api-reference/: breadcord.helpers.md
docs/docs/api-reference/: breadcord.config.md
docs/docs/for-developers/: building-loaf-packages.md  creating-a-module.md
docs/docs/for-users/: install-breadcord.md
docs/overrides/: home.html  main.html
docs/stylesheets/: extra.css  home.css
src/: config.py
tests/: setup_breadcord.py
